styles/styles.css
input[type="button"] {
    width: 100%;
}

.number_field {
    width: 100%;
    text-align: right;
    padding: 5px;
    border: 1px solid;
    height: 35px;
}

table {
    table-layout: fixed;
    width: 250px;
    margin: 0 auto;
}

@font-face {
    font-family: 'Quivira';
    src: url("Quivira.otf") format("opentype");
}

body {
    font-family: 'Quivira';
    width: 650px;
    margin: auto;
}

.roman_display {
    background-color: #f7e2d0;
}

.arabic_display {
    background-color:#d0f2d0;
}

.word_display {
    background-color: #ded3f5;
}

h1{
    margin: 0;
    padding: 20px;
}

